Fix text wrapp on view projects in nav container so that it doesnt cover upper line of text.

--- a/src/style.css
+++ b/src/style.css
@@ -66,8 +66,8 @@ padding:.5rem;
     list-style: none;
     font-family: niceFontRegular;
     padding-left: 0;
-    font-size: 1rem
-    
+    font-size: 1rem;
+    background-color: var(--grey);
     
 
     
@@ -76,7 +76,8 @@ padding:.5rem;
 }
 
 .navigationMenu li span{
-    background-color: var(--grey);
+    
+    padding:1rem;
     
 
 }
@@ -153,7 +154,7 @@ padding:.5rem;
     
     background: var(--grey);
     padding:.5rem;
-    border: 1px solid red;
+    border: 1px solid var(--darkBlue);
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -162,12 +163,12 @@ padding:.5rem;
   }
 
   .projectsDiv {
-display: grid;
-grid-template-columns: repeat( auto-fit, minmax(250px, 1fr) );
-grid-template-rows: auto;
+    display: grid;
+    grid-template-columns: repeat( auto-fit, minmax(250px, 1fr) );
+    grid-template-rows: auto;
 
 
-gap:1rem;
+    gap:1rem;
 
   }
 
